--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "markdown-it-chain",
-  "version": "1.3.0",
+  "name": "@ckienle/markdown-it-chain",
+  "version": "0.1.0",
   "description": "A chaining API like webpack-chain but for markdown-it.",
   "repository": {
-    "url": "ULIVZ/markdown-it-chain",
+    "url": "ChristianKienle/markdown-it-chain",
     "type": "git"
   },
   "main": "src/index.js",
@@ -54,8 +54,9 @@
     "markdown-it": "^10.0.0",
     "markdown-it-anchor": "^5.0.2",
     "markdown-it-table-of-contents": "^0.4.3",
-    "xo": "^0.24.0",
+    "xo": "^0.25.3",
     "release-it": "12.3.6",
+    "babel-preset-env": "^1.7.0",
     "conventional-changelog-cli": "^2.0.1"
   },
   "peerDependencies": {
@@ -67,7 +68,7 @@
       "plugin:jest/recommended"
     ],
     "rules": {
-      "unicorn/filename-case": false
+      "unicorn/filename-case": 2
     },
     "envs": [
       "jest"
