--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "markdown-it-chain",
-  "version": "1.3.0",
+  "name": "@gerhobbelt/markdown-it-chain",
+  "version": "1.3.0-1",
   "description": "A chaining API like webpack-chain but for markdown-it.",
   "repository": {
     "url": "ULIVZ/markdown-it-chain",
@@ -13,7 +13,10 @@
   "scripts": {
     "test": "npm run lint && jest",
     "lint": "xo src",
-    "release": "release-it"
+    "fix": "xo --fix src",
+    "jest": "jest",
+    "release": "release-it --dry-run",
+    "pub": "npm publish --access public"
   },
   "author": "ULIVZ <chl814@foxmail.com>",
   "license": "MIT",
@@ -25,10 +28,10 @@
       "test": {
         "presets": [
           [
-            "env",
+            "@babel/env",
             {
               "targets": {
-                "node": "current"
+                "node": "8"
               }
             }
           ]
@@ -37,28 +40,31 @@
     }
   },
   "dependencies": {
-    "webpack-chain": "^6.0.0"
+    "webpack-chain": "^6.4.0"
   },
   "keywords": [
     "markdown-it",
     "chain"
   ],
   "engines": {
-    "node": ">=6.9"
+    "node": ">=8"
   },
   "devDependencies": {
-    "eslint-plugin-jest": "^22.14.0",
-    "eslint-plugin-vue-libs": "^4.0.0",
-    "jest-cli": "^24.8.0",
-    "markdown-it": "^10.0.0",
-    "markdown-it-anchor": "^5.0.2",
-    "markdown-it-table-of-contents": "^0.4.3",
-    "xo": "^0.24.0",
-    "release-it": "12.3.6",
-    "conventional-changelog-cli": "^2.0.1"
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "@gerhobbelt/markdown-it": "10.0.0-31",
+    "@gerhobbelt/markdown-it-anchor": "^4.0.0-11",
+    "@gerhobbelt/markdown-it-table-of-contents": "^0.4.3-1",
+    "conventional-changelog-cli": "2.0.31",
+    "eslint-plugin-jest": "23.8.2",
+    "eslint-plugin-vue-libs": "4.0.0",
+    "jest-cli": "25.2.7",
+    "release-it": "13.5.1",
+    "xo": "0.28.3"
   },
   "peerDependencies": {
-    "markdown-it": ">=5.0.0"
+    "@gerhobbelt/markdown-it": ">=10"
   },
   "xo": {
     "extends": [
@@ -66,7 +72,7 @@
       "plugin:jest/recommended"
     ],
     "rules": {
-      "unicorn/filename-case": false
+      "unicorn/filename-case": 0
     },
     "envs": [
       "jest"
