--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@gerhobbelt/markdown-it": "10.0.0-31",
     "@gerhobbelt/markdown-it-anchor": "^4.0.0-11",
     "@gerhobbelt/markdown-it-table-of-contents": "^0.4.3-1",
+    "@release-it/conventional-changelog": "^1.1.0",
     "conventional-changelog-cli": "2.0.31",
     "eslint-plugin-jest": "23.8.2",
     "eslint-plugin-vue-libs": "4.0.0",
@@ -77,5 +78,13 @@
     "envs": [
       "jest"
     ]
+  },
+  "release-it": {
+    "plugins": {
+      "@release-it/conventional-changelog": {
+        "preset": "angular",
+        "infile": "CHANGELOG.md"
+      }
+    }
   }
 }
